# beforerr_dev

./: .envrc  .nojekyll  .pre-commit-config.yaml  00_core.html  01_basics.html  02_projects.html  02_r.html  03_io.html  03_matplotlib.html  10_polars.html  11_matplotlib.html  11_projects.html  12_r.html  12_tplot.html  README.md  core.html  environment.yml  index.html  justfile  matplotlib.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
beforerr/: __init__.py  _modidx.py  basics.py  core.py  matplotlib.py  polars.py  project.py  r.py  tplot.py
beforerr/io/: __init__.py  json.py  pickle.py  polars.py
beforerr/matplotlib/: __init__.py
data_structure/polars/: index.html
files/: quarto.just
nbs/: 00_core.ipynb  01_basics.ipynb  02_projects.ipynb  02_r.ipynb  03_io.ipynb  10_polars.ipynb  11_matplotlib.ipynb  11_projects.ipynb  12_r.ipynb  12_tplot.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/test/: test.json
src/beforerr/: _modidx.py  basics.py  core.py  polars.py  project.py  r.py  tplot.py
src/beforerr/io/: __init__.py  arrow_ipc.py
src/beforerr/matplotlib/: __init__.py
src/beforerr/matplotlib/styles/: publication.mplstyle
