[project]
name = "beforerr"
dynamic = ["version"]
description = "Personal Python utility library"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "pydantic",
    "universal_pathlib",
    "intake",
    "pipe",
    "loguru",
    "rich",
]
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
r = ["rpy2", "rpy2_arrow"]

[project.urls]
Homepage = "https://beforerr.github.io/beforerr_dev"
Repository = "https://github.com/beforerr/beforerr_dev"

[tool.pdm.version]
source = "file"
path = "beforerr/__init__.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
beforerr = { path = ".", editable = true, extras = ["r"] }
nbdev = "*"
setuptools = "*"
intake = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = "*"
ipykernel = "*"
polars = "*"
r-base = "*"
