[project]
name = "beforerr"
dynamic = ["version"]
description = "Personal Python utility library"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "pydantic",
    "universal_pathlib",
    "intake",
    "pipe",
    "loguru",
    "rich",
]
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
r = ["rpy2", "rpy2_arrow"]
dev = ["nbdev", "ipykernel"]

[project.urls]
Homepage = "https://beforerr.github.io/beforerr_dev"
Repository = "https://github.com/beforerr/beforerr_dev"

[tool.pdm.version]
source = "scm"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.environments]
default = ["dev", "r"]

[tool.pixi.pypi-dependencies]
beforerr = { path = ".", editable = true }
setuptools = "*"

[tool.pixi.dependencies]
matplotlib = "*"
polars = "*"
r-base = "*"
r-arrow = "*"
